--- a/flutter_modular_slidy/pubspec.yaml
+++ b/flutter_modular_slidy/pubspec.yaml
@@ -19,15 +19,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_modular:
+  mobx:
+  flutter_mobx:
+  dio:
   cupertino_icons: ^0.1.2
-
+ 
 dev_dependencies:
+  mobx_codegen:
+  build_runner:
+
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
